<resources>
    <string name="app_name">Lab1</string>
    <string name="Title">中山大学学生信息系统</string>
    <string name="StudentId">学号：</string>
    <string name="Hint1">请输入学号</string>
    <string name="Password">密码：</string>
    <string name="Hint2">请输入密码</string>
    <string name="Student">学生</string>
    <string name="Teacher">教职工</string>
    <string name="Load">登陆</string>
    <string name="Register">注册</string>
</resources>
