<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.lab1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/text_title"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="103dp"
        android:layout_height="84dp"
        android:src="@drawable/sysu"
        android:layout_marginTop="20dp"
        android:id="@+id/img_sysu"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StudentId"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:id="@+id/text_student_id"
        app:layout_constraintRight_toLeftOf="@+id/edit_student_id"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_student_id"/>

    <EditText
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:hint="@string/Hint1"
        android:id="@+id/edit_student_id"
        android:textSize="18sp"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/img_sysu"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:id="@+id/text_password"
        app:layout_constraintRight_toLeftOf="@+id/edit_password"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_password"/>

    <EditText
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_password"
        android:hint="@string/Hint2"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_student_id"
        app:layout_constraintRight_toRightOf="parent"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Student"
            android:textSize="18sp"
            android:checked="true"
            app:layout_constraintRight_toLeftOf="@+id/radioButton2"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Teacher"
            android:textSize="18sp"/>

    </RadioGroup>

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/Load"-->
        <!--android:id="@+id/button_log"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:background="@drawable/shadow"-->
        <!--android:textColor="@color/white"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/radioGroup"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/button_register"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/button_register"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintHorizontal_chainStyle="packed"/>-->

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/Register"-->
        <!--android:id="@+id/button_register"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:background="@drawable/shadow"-->
        <!--android:textColor="@color/white"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/radioGroup"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/button_log"-->
        <!--app:layout_constraintStart_toEndOf="@+id/button_log"-->
        <!--app:layout_constraintEnd_toEndOf="parent"/>-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Load"
        android:id="@+id/button_log"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/shadow"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintRight_toLeftOf="@+id/guideline"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:id="@+id/button_register"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/shadow"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toRightOf="@+id/guideline"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>



</android.support.constraint.ConstraintLayout>
